--- a/lib/gits_web/live/dashboard_live/setup_paystack.html.heex
+++ b/lib/gits_web/live/dashboard_live/setup_paystack.html.heex
@@ -12,7 +12,7 @@
   <.input type="text" label="Account number" field={f[:account_number]} />
 
   <div class="col-span-full flex items-center gap-8">
-    <button class="rounded-lg bg-zinc-50 p-4 text-sm font-medium hover:bg-zinc-100">
+    <button class="min-w-40 rounded-lg bg-zinc-50 p-4 text-sm font-medium hover:bg-zinc-100">
       Save details
     </button>
     <.link
