--- a/lib/gits_web/live/event_live/feature.html.heex
+++ b/lib/gits_web/live/event_live/feature.html.heex
@@ -3,7 +3,7 @@
     <div class="aspect-[3/2] rounded-2xl bg-gray-400"></div>
     <div class="flex flex-col gap-2">
       <div class="flex grow gap-2">
-        <div class="size-10 flex flex-col items-center justify-center rounded-xl border border-zinc-400 *:leading-3">
+        <div class="size-10 flex shrink-0 flex-col items-center justify-center rounded-xl border border-zinc-400 *:leading-3">
           <span class="text-base font-semibold">07</span>
           <span class="text-xs">Jun</span>
         </div>
