--- a/lib/gits_web/live/event_live/feature.html.heex
+++ b/lib/gits_web/live/event_live/feature.html.heex
@@ -1,7 +1,7 @@
-<div class="mx-auto max-w-screen-lg space-y-4 px-4 lg:p-0">
+<div class="mx-auto max-w-screen-lg space-y-4 md:space-y-8">
   <div class="grid gap-4 md:grid-cols-[theme(space.80)_1fr] md:gap-6">
     <div class="aspect-[3/2] rounded-2xl bg-gray-400"></div>
-    <div class="flex flex-col gap-2">
+    <div class="flex flex-col gap-4">
       <div class="flex grow gap-2">
         <div class="size-10 flex shrink-0 flex-col items-center justify-center rounded-xl border border-zinc-400 *:leading-3">
           <span class="text-base font-semibold">07</span>
@@ -10,7 +10,10 @@
         <h1 class="text-3xl font-medium"><%= @event.name %></h1>
       </div>
       <div>
-        <button class="rounded-2xl bg-white p-4 text-sm font-medium shadow-sm">
+        <button
+          phx-click="get_tickets"
+          class="rounded-2xl border bg-white p-4 text-sm font-medium"
+        >
           Get Tickets
         </button>
       </div>
