--- a/lib/gits_web/live/dashboard_live/settings.html.heex
+++ b/lib/gits_web/live/dashboard_live/settings.html.heex
@@ -1,4 +1,4 @@
-<h1 class="text-4xl font-semibold">Settings</h1>
+<h1 class="text-xl font-semibold">Settings</h1>
 <div :if={false} class="space-y-8 rounded-lg">
   <h2 class="text-2xl font-medium">General</h2>
   <div class="grid gap-4">
