--- a/lib/gits_web/live/event_live/feature.html.heex
+++ b/lib/gits_web/live/event_live/feature.html.heex
@@ -1,11 +1,17 @@
 <div class="mx-auto max-w-screen-lg space-y-4 md:space-y-8">
-  <div class="grid gap-4 md:grid-cols-[theme(space.80)_1fr] md:gap-6">
-    <div class="aspect-[3/2] rounded-2xl bg-gray-400"></div>
+  <div class="grid gap-4 md:grid-cols-[theme(space.80)_1fr] md:gap-6 lg:grid-cols-[theme(space.96)_1fr]">
+    <div class="aspect-[3/2] overflow-hidden rounded-2xl bg-gray-400">
+      <img
+        src={@feature_image}
+        alt=""
+        class="size-full object-cover transition-transform duration-300 hover:scale-110"
+      />
+    </div>
     <div class="flex flex-col gap-4">
       <div class="flex grow gap-2">
         <div class="size-10 flex shrink-0 flex-col items-center justify-center rounded-xl border border-zinc-400 *:leading-3">
-          <span class="text-base font-semibold">07</span>
-          <span class="text-xs">Jun</span>
+          <span class="text-base font-semibold"><%= @starts_at_day %></span>
+          <span class="text-xs"><%= @starts_at_month %></span>
         </div>
         <h1 class="text-3xl font-medium"><%= @event.name %></h1>
       </div>
