--- a/lib/gits_web/live/event_live/tickets.html.heex
+++ b/lib/gits_web/live/event_live/tickets.html.heex
@@ -1,6 +1,6 @@
 <h1 class="col-span-full text-4xl font-light">Get Tickets</h1>
 <div class="mx-auto grid max-w-screen-lg gap-2 md:grid-cols-2 md:gap-8 lg:grid-cols-3">
-  <div class="col-span-full rounded-2xl bg-white p-4 shadow-sm">
+  <div class="col-span-full rounded-2xl bg-white p-4 shadow-sm lg:p-8">
     <h2 class="text-xl font-medium"><%= @event.name %></h2>
 
     <div class="mt-4 flex items-center gap-2 text-zinc-700">
@@ -13,7 +13,10 @@
     </div>
   </div>
 
-  <div :for={ticket <- @tickets} class="space-y-2 rounded-2xl bg-white p-4 shadow-sm">
+  <div
+    :for={ticket <- @tickets}
+    class="space-y-2 rounded-2xl bg-white p-4 shadow-sm lg:space-y-4 lg:p-8"
+  >
     <div class="flex gap-2">
       <h3 class="font-semibold"><%= ticket.name %></h3>
       <span>&bull;</span>
@@ -49,10 +52,9 @@
     <% end %>
   </div>
   <button
-    phx-click="package_tickets"
+    phx-click="lock_basket"
     class="min-w-40 rounded-2xl bg-zinc-800 p-4 text-sm font-medium text-white hover:bg-zinc-700"
   >
     Continue
   </button>
-  <button class="rounded-lg p-2 text-sm font-medium">Cancel</button>
 </div>
