remove amount from basket

--- a/lib/gits_web/live/event_live/payment.html.heex
+++ b/lib/gits_web/live/event_live/payment.html.heex
@@ -27,7 +27,7 @@
   </div>
   <div class="shadow-smx col-span-full flex flex-wrap items-center gap-6 rounded-2xl pt-4">
     <button
-      phx-click="checkout"
+      phx-click="lock_basket"
       class="min-w-40 rounded-2xl bg-zinc-900 p-4 text-sm font-medium text-white hover:bg-zinc-700"
     >
       Checkout
