--- a/lib/gits_web/components/layouts/catalyst.html.heex
+++ b/lib/gits_web/components/layouts/catalyst.html.heex
@@ -51,28 +51,45 @@
         </div>
       </div>
       <div
-        class="mt-4 grid gap-2 border-t pt-4 text-base font-medium *:flex *:items-center *:gap-3 *:rounded-lg *:p-2 *:text-zinc-700 hover:*:bg-zinc-50 lg:hover:*:bg-zinc-100"
+        class="mt-4 grid gap-2 border-t pt-4 text-base font-medium *:flex *:items-center *:gap-3 *:rounded-lg *:p-2 *:text-zinc-500 hover:*:bg-zinc-50 lg:hover:*:bg-zinc-100"
         phx-click={
           JS.remove_class("translate-x-72", to: "#sidebar")
           |> JS.add_class("hidden", to: "#backdrop")
         }
       >
-        <.link href={~p"/accounts/#{@slug}/next"}>
+        <.link navigate={~p"/accounts/#{@slug}/next"}>
           <.icon name="hero-home-solid" />
           <span>Home</span>
         </.link>
-        <.link href={~p"/accounts/#{@slug}/next/events"}>
+        <.link navigate={~p"/accounts/#{@slug}/next/events"}>
           <.icon name="hero-calendar-days-solid" />
           <span>Events</span>
         </.link>
-        <.link href={~p"/accounts/#{@slug}/next/team"}>
+        <.link navigate={~p"/accounts/#{@slug}/next/team"}>
           <.icon name="hero-user-group-solid" />
           <span>Team</span>
         </.link>
       </div>
+
+      <%= if @context_options do %>
+        <span class="mt-4 truncate text-sm font-semibold text-zinc-400">
+          <%= @title %>
+        </span>
+        <div
+          class="grid gap-2 pt-4 text-base font-medium *:flex *:items-center *:gap-3 *:rounded-lg *:p-2 *:text-zinc-500 hover:*:bg-zinc-50 lg:hover:*:bg-zinc-100"
+          phx-click={
+            JS.remove_class("translate-x-72", to: "#sidebar")
+            |> JS.add_class("hidden", to: "#backdrop")
+          }
+        >
+          <.link :for={option <- @context_options} navigate={~p"/accounts/#{@slug}/next"}>
+            <span><%= option.label %></span>
+          </.link>
+        </div>
+      <% end %>
       <div role="none" class="grow"></div>
       <div
-        class="mt-4 grid gap-2 pt-4 text-base font-medium *:flex *:items-center *:gap-3 *:rounded-lg *:p-2 *:text-zinc-700 hover:*:bg-zinc-50 lg:hover:*:bg-zinc-100"
+        class="mt-4 grid gap-2 pt-4 text-base font-medium *:flex *:items-center *:gap-3 *:rounded-lg *:p-2 *:text-zinc-500 hover:*:bg-zinc-50 lg:hover:*:bg-zinc-100"
         phx-click={
           JS.remove_class("translate-x-72", to: "#sidebar")
           |> JS.add_class("hidden", to: "#backdrop")
@@ -82,6 +99,41 @@
           <.icon name="hero-cog-6-tooth-solid" />
           <span>Settings</span>
         </.link>
+      </div>
+      <div class="mt-4 hidden border-t pt-4 lg:block">
+        <div
+          id="user_dropdown"
+          class="flex items-center gap-4 rounded-2xl p-2 hover:bg-zinc-100"
+          phx-hook="DropdownButton"
+          phx-click={JS.toggle(to: "#user_dropdown_options")}
+          phx-click-away={JS.hide(to: "#user_dropdown_options")}
+        >
+          <img src="/images/placeholder.png" alt="" class="size-10 rounded-xl" />
+          <div class="grid grow text-sm">
+            <span class="text-sm font-medium"><%= @current_user.display_name %></span>
+            <span class="text-xs text-zinc-700"><%= @current_user.email %></span>
+          </div>
+          <.icon name="hero-chevron-up-mini" class="text-zinc-700" />
+          <div
+            id="user_dropdown_options"
+            class="absolute z-30 grid gap-1 rounded-xl border bg-white p-1 shadow-lg *:flex *:w-52 *:items-center *:gap-2 *:rounded-lg *:p-2 hover:*:bg-zinc-50"
+            style="display: none;"
+            data-dropdown
+          >
+            <.link>
+              <.icon name="hero-user-mini" />
+              <span>My profile</span>
+            </.link>
+            <.link>
+              <.icon name="hero-question-mark-circle-mini" />
+              <span>Help &amp; feedback</span>
+            </.link>
+            <.link>
+              <.icon name="hero-arrow-right-start-on-rectangle-mini" />
+              <span>Sign out</span>
+            </.link>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -98,7 +150,7 @@
       </button>
 
       <button
-        class="size-10 flex overflow-hidden p-1"
+        class="size-10 flex overflow-hidden p-0.5"
         phx-hook="DropdownButton"
         id="avatar_dropdown"
         phx-click={JS.toggle(to: "#avatar_dropdown_options")}
