--- a/lib/gits_web/controllers/page_html/next.html.heex
+++ b/lib/gits_web/controllers/page_html/next.html.heex
@@ -37,7 +37,11 @@
           <span class="hidden sm:inline-block">Sign Out</span>
         </.link>
       <% else %>
-        <.link href="/sign-in" class="flex items-center gap-1.5">
+        <.link
+          :if={FunWithFlags.enabled?(:auth)}
+          href="/sign-in"
+          class="flex items-center gap-1.5"
+        >
           <.icon name="hero-arrow-right-end-on-rectangle-mini" />
           <span class="">Sign In</span>
         </.link>
@@ -73,7 +77,10 @@
     </div>
   </div>
 
-  <div class="top-[calc(100svh-theme(space.24))] absolute inset-0 z-20 space-y-6 px-2 md:top-[calc(100dvh-theme(space.40))]">
+  <div
+    :if={false}
+    class="top-[calc(100svh-theme(space.24))] absolute inset-0 z-20 space-y-6 px-2 md:top-[calc(100dvh-theme(space.40))]"
+  >
     <div class="mx-auto w-full max-w-screen-2xl rounded-lg bg-white p-4 shadow dark:bg-zinc-800 md:p-12">
       <.simple_form
         action="/events"
