--- a/lib/gits_web/live/dashboard_live/events.html.heex
+++ b/lib/gits_web/live/dashboard_live/events.html.heex
@@ -1,7 +1,7 @@
 <h1 class="text-xl font-semibold">Events</h1>
 <div class="flex">
   <div class="grow"></div>
-  <button class="rounded-lg bg-black p-4 text-sm font-medium text-white">
+  <button class="rounded-xl bg-black p-4 text-sm font-medium text-white">
     Create event
   </button>
 </div>
