--- a/lib/gits_web/components/layouts/auth.html.heex
+++ b/lib/gits_web/components/layouts/auth.html.heex
@@ -1,7 +1,7 @@
-<div class="min-h-screen gap-4 bg-white p-4 pt-32 lg:flex lg:px-12">
+<div class="h-screen gap-4 overflow-auto bg-white p-4 pt-20 lg:flex lg:px-12">
   <.flash_group flash={@flash} />
   <main class="mx-auto w-full space-y-8 sm:max-w-md">
-    <a href="/" class="font-poppins text-3xl font-black italic">GiTS</a>
+    <a href="/" class="font-poppins text-2xl font-black italic">GiTS</a>
     <%= @inner_content %>
   </main>
   <aside class="hidden grow p-4 lg:block"></aside>
