--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -1,51 +1,61 @@
-<div class="flex items-center pt-12 lg:pt-28">
-  <div class="flex grow flex-col justify-center gap-6">
-    <h2 class="text-xl font-medium tracking-tight text-gray-900">
-      Easy events, affordable tickets.
-    </h2>
-    <div class="pt-20">
-      <div class="flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
-        <.link
-          :for={event <- @events}
-          navigate={~p"/events/#{event.masked_id}"}
-          class="rounded-2xl overflow-hidden w-64 aspect-[4/5] relative shrink-0"
-          id={"#{event.id}"}
-        >
-          <img
-            src={get_listing_image(event.account_id, event.id)}
-            class="h-full w-full object-cover transition-transform duration-300 hover:scale-110"
-          />
-          <div class="absolute top-3 right-3 flex flex-col items-center rounded-lg bg-white p-3 py-2.5">
-            <span class="text-lg font-bold tabular-nums leading-4 text-gray-800">
-              <%= event.starts_at |> Timex.format!("%d", :strftime) %>
-            </span>
-            <span class="text-xs leading-4 text-gray-600">
-              <%= event.starts_at |> Timex.format!("%b", :strftime) %>
-            </span>
-          </div>
-
-          <div class="absolute inset-x-3 bottom-3 space-y-2 rounded-lg bg-white p-2">
-            <h3 class="line-clamp-2 text-sm font-semibold"><%= event.name %></h3>
-            <div class="flex items-center justify-between gap-2">
-              <span class="truncate text-sm text-gray-600">
-                <%= if Map.has_key?(event, :address) and Map.has_key?(event.address, :name) do %>
-                  <%= event.address.name %>
-                <% end %>
-              </span>
-              <span class="shrink-0 rounded bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800 dark:bg-blue-900 dark:text-blue-300">
-                <%= if event.minimum_ticket_price > 0 do %>
-                  R <%= event.minimum_ticket_price %>
-                <% else %>
-                  FREE
-                <% end %>
-                <%= if event.ticket_price_varies do %>
-                  &plus;
-                <% end %>
-              </span>
-            </div>
-          </div>
-        </.link>
-      </div>
-    </div>
+<div
+  class="fixed inset-0 overflow-hidden bg-zinc-50 blur-3xl"
+  phx-hook="HeaderOpacityOnScroll"
+  id="fancy_background"
+>
+  <div class="size-72 fixed -top-16 -left-16 animate-pulse rounded-full bg-purple-300 opacity-50 mix-blend-multiply blur-3xl lg:size-[40rem]">
   </div>
+  <div class="size-40 size-72 fixed top-4 left-48 animate-pulse rounded-full bg-yellow-300 opacity-50 mix-blend-multiply blur-3xl lg:left-[26rem] lg:top-96">
+  </div>
+  <div class="size-96 fixed right-4 bottom-0 animate-pulse rounded-full bg-pink-300 opacity-50 mix-blend-multiply blur-3xl lg:size-[50rem] lg:-right-40 lg:-bottom-20">
+  </div>
+</div>
+
+<.header signed_in={@current_user} />
+
+<div class="h-[calc(100dvh-theme(space.64))] relative mx-auto flex max-w-screen-xl flex-col justify-center gap-8 overflow-hidden p-4">
+  <h1 class="text-5xl font-semibold leading-tight dark:text-white md:text-6xl">
+    Unlock Unforgettable Experiences
+  </h1>
+  <p class="max-w-xl text-xl font-light text-zinc-800 dark:text-zinc-200">
+    We offer better security, faster check-in, and lower costs. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
+  </p>
+  <div class="flex items-center gap-8 font-medium">
+    <.link
+      :if={FunWithFlags.enabled?(:get_started_button)}
+      class="border-2 rounded-lg border-zinc-600 dark:border-zinc-300 dark:text-zinc-100 p-2 px-4 hover:underline"
+    >
+      Get started
+    </.link>
+    <.link
+      :if={FunWithFlags.enabled?(:why_choose_button)}
+      class="hover:underline dark:text-zinc-100"
+    >
+      Why choose <span class="font-black italic text-zinc-700 dark:text-zinc-200">GiTS</span>?
+    </.link>
+  </div>
+</div>
+<div class="relative w-full bg-gradient-to-t from-white to-transparent py-8">
+  <.simple_form
+    action="/events"
+    for={%{}}
+    method="get"
+    class="mx-auto flex max-w-screen-lg items-center p-4 gap-2"
+  >
+    <input
+      name="q"
+      type="search"
+      class="bg-white/50 w-full rounded-md border-none bg-zinc-50 p-4 text-sm outline-none ring-1 ring-zinc-200 focus-visible:ring-zinc-400 dark:bg-zinc-700 dark:ring-zinc-600"
+      placeholder="Search for an event, city, etc"
+    />
+  </.simple_form>
+</div>
+<div class="relative bg-white p-6">
+  <nav class="flex flex-wrap justify-center gap-8 *:text-sm">
+    <.link :if={FunWithFlags.enabled?(:organizers)} href="/organizers">
+      Business & Organizers
+    </.link>
+    <.link :if={FunWithFlags.enabled?(:privacy)} href="/privacy">Privacy</.link>
+    <.link :if={FunWithFlags.enabled?(:terms)} href="/terms">Terms</.link>
+  </nav>
 </div>
