--- a/lib/gits_web/live/auth_live/form.html.heex
+++ b/lib/gits_web/live/auth_live/form.html.heex
@@ -6,9 +6,9 @@
   phx-trigger-action={@trigger_action}
   action={@action}
   method="POST"
-  class="space-y-10"
+  class="space-y-6 p-0.5"
 >
-  <h1 class="font-poppins text-3xl font-semibold text-gray-900"><%= @title %></h1>
+  <h1 class="font-poppins text-xl font-semibold text-gray-900"><%= @title %></h1>
   <div :if={@is_register?} class="mb-5">
     <.input type="text" label="Display name" field={f[:display_name]} />
   </div>
