--- a/lib/gits_web/live/dashboard_live/home.html.heex
+++ b/lib/gits_web/live/dashboard_live/home.html.heex
@@ -1,6 +1,17 @@
-<h1 class="px-4 text-3xl">Organizers</h1>
-<div class="flex w-full flex-wrap items-start gap-8 px-4 *:flex *:flex-col">
-  <.link navigate="/accounts/new" class="block h-40 w-72 shrink-0 space-y-4 rounded-xl border p-6">
+<h1 class="px-4 text-xl font-semibold">Home</h1>
+<div class="grid px-4">
+  <div class="grid gap-2">
+    <span class="text-sm text-zinc-400">Total Events Created</span>
+    <span class="text-4xl font-medium">0</span>
+  </div>
+</div>
+
+<div class="flex w-full flex-wrap items-start gap-8 p-2 *:flex *:flex-col">
+  <.link
+    :for={x <- 1..2}
+    navigate="/accounts/new"
+    class="block h-40 w-72 shrink-0 space-y-4 rounded-xl border p-6"
+  >
     <span class="font-semibold">Create a new account</span>
     <span class="grow text-sm text-zinc-500">
       For your organization to manage events, invite team members and more
