--- a/lib/gits_web/controllers/page_html/events.html.heex
+++ b/lib/gits_web/controllers/page_html/events.html.heex
@@ -1,29 +1,2 @@
-<div class="sticky top-0 z-10 space-y-8 px-2">
-  <div class="mx-auto w-full max-w-screen-2xl space-y-6 rounded-lg bg-white p-4 shadow dark:bg-zinc-800">
-    <.simple_form
-      action="/events"
-      for={%{}}
-      method="get"
-      class="mx-auto flex max-w-screen-md items-center gap-2"
-    >
-      <input
-        name="q"
-        type="search"
-        class="w-full rounded-md border-none bg-zinc-50 p-4 text-sm outline-none ring-1 ring-zinc-200 focus-visible:ring-zinc-400 dark:bg-zinc-700 dark:ring-zinc-600"
-        placeholder="Search for an event, city, etc"
-      />
-      <button class="flex rounded-lg p-3.5 outline-none hover:ring-1 hover:ring-zinc-200 focus-visible:ring-1 focus-visible:ring-zinc-400 dark:hover:ring-zinc-700">
-        <.icon name="hero-magnifying-glass" class="text-zinc-400" />
-      </button>
-    </.simple_form>
-    <%= if FunWithFlags.enabled?(:event_listing) do %>
-      <div class="flex flex-wrap">
-        <div>event 1</div>
-      </div>
-    <% else %>
-      <div class="p-8 p-28 text-center">
-        <span class="text-sm italic text-zinc-600">No results</span>
-      </div>
-    <% end %>
-  </div>
-</div>
+No results
+
