--- a/lib/gits/email_templates/base_layout.mjml.eex
+++ b/lib/gits/email_templates/base_layout.mjml.eex
@@ -1,27 +1,51 @@
 <mjml lang="en">
   <mj-head>
+  <mj-breakpoint width="320px" />
     <mj-font name="Poppins" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" />
+    <mj-title>Hello</mj-title>
     <mj-attributes>
-      <mj-text font-size="16px" padding="10px 0" line-height="1.25"></mj-text>
-      <mj-all font-family="Poppins,-apple-system,BlinkMacSystemFont,&quot;Segoe UI&quot;,Helvetica,Arial,sans-serif,&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;" />
+      <mj-all padding="0px" font-family="Poppins,-apple-system,BlinkMacSystemFont,&quot;Segoe UI&quot;,Helvetica,Arial,sans-serif,&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;" font-size="16px" font-weight="400" color="#3f3f46"/>
+      <mj-text padding="15px 0" line-height="1.4"/>
+      <mj-column padding="0px 25px" />
     </mj-attributes>
     <mj-title><%= @title %></mj-title>
   </mj-head>
-  <mj-body background-color="#fafafa">
-    <mj-wrapper padding="50px 10px" border-radius="16px">
-      <mj-section padding="50px 20px" background-color="#ffffff" border-radius="10px">
-        <mj-column>
-          <mj-text font-size="26px" font-weight="600"><%= @title %></mj-text>
-          <%= @inner_content %>
-          <mj-text>Regards</mj-text>
-          <mj-text font-style="italic" font-size="24px" font-weight="900">
-            <mj-raw>
-              <a style="text-decoration: none; color: black;" href="<%= @base_url %>">GiTS</a>
+  <mj-body background-color="#ffffff">
+    <mj-section padding="0px" padding-top="20px">
+      <mj-column vertical-align="middle">  
+        <mj-text font-style="italic" font-size="24px" font-weight="900">
+          <mj-raw>
+            <a style="text-decoration: none; color: black;" href="<%= @base_url %>">GiTS</a>
             </mj-raw>
-          </mj-text>
-          <mj-text padding-top="10px" font-size="10px" color="#64748b">&copy; 2024</mj-text>
-        </mj-column>
-      </mj-section>
-    </mj-wrapper>
+        </mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section padding="20px 0px">
+      <mj-column>
+        <mj-text font-size="28px" font-weight="500">
+          <%= @title %>
+        </mj-text>
+        <%= @inner_content %>
+        <mj-divider border-width="1px" border-color="#e4e4e7"/>
+      </mj-column>
+    </mj-section>
+    <mj-section padding="0px">
+      <mj-column vertical-align="middle">  
+        <mj-text font-size="12px" font-weight="400">
+          <mj-raw>
+            <a style="text-decoration: none; color: black;" href="<%= @base_url %>"><%= @base_url %></a>
+            </mj-raw>
+        </mj-text>
+      </mj-column>
+      <mj-column vertical-align="middle" >
+        <mj-text padding-top="10px" font-size="10px" color="#64748b" align="right">
+          <mj-raw> 
+            <div>
+              <span>&copy; 2024</span>
+            </div>
+          </mj-raw> 
+        </mj-text>
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
