--- a/lib/gits_web/live/dashboard_live/home.html.heex
+++ b/lib/gits_web/live/dashboard_live/home.html.heex
@@ -1,29 +1,45 @@
-<h1 class="px-4 text-xl font-semibold">Home</h1>
-<div class="grid px-4">
-  <div class="grid gap-2">
-    <span class="text-sm text-zinc-400">Total Events Created</span>
-    <span class="text-4xl font-medium">0</span>
-  </div>
-</div>
+<h1 class="px-4 text-xl font-semibold">Welcome, <%= @current_user.display_name %></h1>
 
-<div class="flex w-full flex-wrap items-start gap-8 p-2 *:flex *:flex-col">
-  <.link
-    :for={x <- 1..2}
-    navigate="/accounts/new"
+<h2 class="px-4 text-3xl">Lets get you setup</h2>
+
+<div class="flex w-full flex-wrap items-start gap-8 p-2 px-4 *:flex *:flex-col">
+  <div
+    :if={is_nil(@current_user.confirmed_at)}
     class="block h-40 w-72 shrink-0 space-y-4 rounded-xl border p-6"
   >
-    <span class="font-semibold">Create a new account</span>
+    <span class="font-semibold">Secure your account</span>
     <span class="grow text-sm text-zinc-500">
-      For your organization to manage events, invite team members and more
+      Please verify your email address. Check your inbox for a verification link.
     </span>
-  </.link>
-  <.link
-    navigate={~p"/sign-in?return_to=/organizers"}
-    class="h-40 w-72 shrink-0 space-y-4 rounded-xl border p-6 *:block"
-  >
-    <span class="font-semibold">Sign in to see more options</span>
-    <span class="grow text-sm text-zinc-500">
-      Sign in to see invitations and organizations you are a part of
-    </span>
-  </.link>
+  </div>
+
+  <%= if not is_nil(@current_user.confirmed_at) do %>
+    <.link
+      navigate={~p"/accounts/#{@slug}/team/invites/new"}
+      class="block h-40 w-72 shrink-0 hover:shadow-md transition-all space-y-4 rounded-xl border p-6"
+    >
+      <span class="font-semibold">Invite your first member</span>
+      <span class="grow text-sm text-zinc-500">
+        Invite people with their emails and assign them different roles for this organization
+      </span>
+    </.link>
+    <.link
+      navigate={~p"/sign-in?return_to=/organizers"}
+      class="h-40 block w-72 shrink-0 space-y-4 hover:shadow-md transition-all rounded-xl border p-6 *:block"
+    >
+      <span class="font-semibold">Prepare for payments</span>
+      <span class="grow text-sm text-zinc-500">
+        Setup a paystack and/or payfast account with us to start receiving payouts from ticket sales
+      </span>
+    </.link>
+    <.link
+      navigate="/accounts/new"
+      class="block h-40 w-72 shrink-0 space-y-4 hover:shadow-md transition-all rounded-xl border p-6"
+    >
+      <span class="font-semibold">Create your first event</span>
+      <span class="grow text-sm text-zinc-500">
+        You can create an invite only event or with free tickets even before setting up payouts
+      </span>
+    </.link>
+  <% end %>
 </div>
