--- a/lib/gits_web/live/dashboard_live/settings.html.heex
+++ b/lib/gits_web/live/dashboard_live/settings.html.heex
@@ -1,53 +1,42 @@
-<h1 class="text-xl font-semibold">Settings</h1>
-<div :if={false} class="space-y-8 rounded-lg">
-  <h2 class="text-2xl font-medium">General</h2>
-  <div class="grid gap-4">
-    <h3 class="col-span-full text-lg font-medium">Account information</h3>
-    <label class="grid max-w-3xl gap-2 text-sm">
-      <div class="flex justify-between text-zinc-600">
-        <span>Name</span>
-        <span></span>
-      </div>
-      <input
-        class="rounded-md border-zinc-200 p-4 text-sm outline-none focus:border-zinc-600 focus:outline-none focus:ring-zinc-600"
-        type="text"
-        value="Hello"
-      />
-      <span></span>
-    </label>
+<h1 class="mx-auto max-w-screen-lg text-xl font-semibold">Settings</h1>
+<h2 class="mx-auto max-w-screen-lg text-3xl">Payment providers</h2>
+<div class="mx-auto grid max-w-screen-lg gap-4 md:grid-cols-2 md:gap-8">
+  <div class="flex flex-wrap justify-between gap-6 rounded-xl border p-4">
+    <h3 class="font-semibold">Paystack</h3>
+    <div><button phx-click="toggle" class="text-sm">Setup</button></div>
   </div>
-  <div :if={false}>
-    <.link class="col-span-full text-sm font-medium">Setup paystack</.link>
+  <div class="flex justify-between gap-6 rounded-xl border p-4">
+    <h3 class="font-semibold">Payfast</h3>
+    <div><button class="text-sm">Setup</button></div>
   </div>
 </div>
 
-<div class="space-y-8 rounded-lg">
-  <h2 class="text-2xl font-medium">Billing & Payouts</h2>
-  <%= if @account.billing_enabled? do %>
-    <.simple_form :let={f} for={@form}>
-      <.radio_group field={f[:payout_provider]} label="Select default payout provider">
-        <:radio value="paystack">
-          <div class="group flex justify-between last:*:hidden last:peer-checked/paystack:*:inline-flex">
-            <span>Paystack</span>
-            <.icon class="" name="hero-check-circle-mini" />
-          </div>
-        </:radio>
-      </.radio_group>
-    </.simple_form>
-    <div class="flex gap-8">
-      <.link
-        :if={not @account.billing_settings.paystack_ready?}
-        navigate={~p"/accounts/#{@slug}/next/settings/paystack"}
-        class="col-span-full text-sm font-medium hover:underline"
-      >
-        Setup paystack
-      </.link>
-    </div>
-  <% else %>
-    <div>
-      <button class="min-w-40 rounded-lg bg-zinc-50 p-4" phx-click="enable_billing">
-        Enable Billing &amp; Payouts
+<div
+  :if={@toggle}
+  class="!m-0 bg-zinc-500/50 fixed inset-0 z-20 flex justify-end lg:p-4"
+  id="side-modal"
+  phx-click="toggle"
+>
+  <div
+    data-modal
+    class="grid w-full max-w-xl content-start gap-10 bg-white p-4 lg:rounded-xl lg:p-8"
+    phx-click="fll"
+    phx-mounted={
+      JS.transition(
+        {"ease-out duration-100", "translate-y-10 lg:translate-y-0 lg:translate-x-20 opacity-95",
+         "translate-y-0  lg:translate-x-0 opacity-100"}
+      )
+    }
+  >
+    <h3 class="font-semibold">Setup Paystack</h3>
+    <.simple_form :let={f} for={%{}} class="gap-6 grid">
+      <.input field={f[:business_name]} label="Business name" />
+      <.input field={f[:account_number]} label="Account number" />
+      <.input field={f[:bank]} type="select" options={@banks} label="Bank" />
+      <button type="button" class="rounded-lg bg-zinc-700 px-4 py-3 text-white">Save</button>
+      <button type="button" phx-click="toggle" class="rounded-lg px-4 py-3 hover:bg-zinc-100">
+        Cancel
       </button>
-    </div>
-  <% end %>
+    </.simple_form>
+  </div>
 </div>
